--- a/AN588-Week-2.Rmd
+++ b/AN588-Week-2.Rmd
@@ -9,25 +9,9 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+# AN588-Week-2 R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
 
 {stringr} did not work initially --> go to Tools>Install Packages...>CRAN selected>type package name OR install.packages("stringr")
 
@@ -36,174 +20,56 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 m}
 *copy and paste broke the chunk ERROR*
 
-```{r m <- matrix(data = c(1, 2, 3, 4), nrow=2, ncol= 2) m}
+*chunk error again* >> keep out of brackets and soemtimes have to retype the "}"
 
+# Challenge 1:
+
+```{r}
+v <- c("Stately", "plump", "Buck", "Mulligan", "came", "from", "the", "stairhead", "bearing", "a", "bowl", "of", "lather", "on", "which", "a", "mirror", "and", "a", "razor", "lay", "crossed")
+v
 ```
-*chunk error again*
 
-#Challenge 1:
-> v <- c("Stately, plump Buck Mulligan came from the stairhead, bearing a bowl of lather on which a mirror and a razor lay crossed.")
-> v
-[1] "Stately, plump Buck Mulligan came from the stairhead, bearing a bowl of lather on which a mirror and a razor lay crossed."
-> str_split("Stately, plump Buck Mulligan came from the stairhead, bearing a bowl of lather on which a mirror and a razor lay crossed")
-Error in str_split("Stately, plump Buck Mulligan came from the stairhead, bearing a bowl of lather on which a mirror and a razor lay crossed") : 
-  could not find function "str_split"
-> strsplit(x = v, split = 3,fixed = FALSE, perl = FALSE, useBytes = FALSE)
-[[1]]
-[1] "Stately, plump Buck Mulligan came from the stairhead, bearing a bowl of lather on which a mirror and a razor lay crossed." 
+```{r}
+strsplit(x = v, split = 3,fixed = FALSE, perl = FALSE, useBytes = FALSE)
+```
 
-*failed*
+```{r}
+v[seq(from = 1, to = 22, by = 3)]
+```
+*success of every 3rd element* 
 
-> v <- c("stately", "plump", "Buck", "Mulligan", "came", "from", "the", "stairhead", "bearing", "a", "bowl", "of", "lather", "on", "which", "a", "mirror", "and", "a", "razor", "lay", "crossed")
-> v
- [1] "stately"   "plump"     "Buck"      "Mulligan"  "came"      "from"     
- [7] "the"       "stairhead" "bearing"   "a"         "bowl"      "of"       
-[13] "lather"    "on"        "which"     "a"         "mirror"    "and"      
-[19] "a"         "razor"     "lay"       "crossed"  
-> strsplit(v)
-Error in strsplit(v) : argument "split" is missing, with no default
-> strsplit(v, split)
-Error in as.character(split) : 
-  cannot coerce type 'closure' to vector of type 'character'
-> v[seq(from=1, to=22, by=3)]
-[1] "stately"  "Mulligan" "the"      "a"        "lather"   "a"       
-[7] "a"        "crossed" 
-
-*success of every 3rd element*
-
-> m <- matrix(data = 1:80, nrow = 8, ncol = 10, byrow = FALSE)
-> m
-     [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10]
-[1,]    1    9   17   25   33   41   49   57   65    73
-[2,]    2   10   18   26   34   42   50   58   66    74
-[3,]    3   11   19   27   35   43   51   59   67    75
-[4,]    4   12   20   28   36   44   52   60   68    76
-[5,]    5   13   21   29   37   45   53   61   69    77
-[6,]    6   14   22   30   38   46   54   62   70    78
-[7,]    7   15   23   31   39   47   55   63   71    79
-[8,]    8   16   24   32   40   48   56   64   72    80
-> x <- m[4, 5]
-> x
-[1] 36
-
-```{rm <- matrix(data = 1:80, nrow = 8, ncol = 10, byrow = FALSE)
-m}
 ```{r}
 m <- matrix(data = 1:80, nrow = 8, ncol = 10, byrow = FALSE)
 m
 ```
 
-*succeeded at above chunk*
-```{r}
-x <- m[2, 3, 6]
-x
-```
+# Challenge 2:
+
+Solution below from: <https://stats.stackexchange.com/questions/10225/extracting-multiple-columns-from-a-matrix-in-r>
 
 ```{r}
-x <- m[2, 3, 6]
+x <- m [,c(2,3,6)]
 x
 ```
-
-
-*above chunk has no play button?*
-
-#Challenge 2
-> x <-m[2][3][6]
-> x
-[1] NA
-
-Failed Challenge 2 Part 1
-
-Attempt2:
-> x <- m [,c(2,3,6)]
-> x
-     [,1] [,2] [,3]
-[1,]    9   17   41
-[2,]   10   18   42
-[3,]   11   19   43
-[4,]   12   20   44
-[5,]   13   21   45
-[6,]   14   22   46
-[7,]   15   23   47
-[8,]   16   24   48
-*correct* Solution from: <https://stats.stackexchange.com/questions/10225/extracting-multiple-columns-from-a-matrix-in-r>
-
-x <- m[row(6,7,8, as.factor=FALSE)]
-Error in row(6, 7, 8, as.factor = FALSE) : unused arguments (7, 8)
-*failed*
-> x <- rbind(6,7,8)
-> 
-> x
-     [,1]
-[1,]    6
-[2,]    7
-[3,]    8
-*only did first column but sort of worked?*
+ *the comma outside the "c" command indicates whether it is for row or column extraction aka [row, column] 
+ 
+```{r}
+x <- m [c(6, 7, 8),]
+x
+```
 
 Given the matrix, m, above, extract the elements from row 2, column 2 to row 6, column 9 and assign them to the variable x:
 
+```{r}
 x <- m[2:6, 2:9]
-> x
-     [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8]
-[1,]   10   18   26   34   42   50   58   66
-[2,]   11   19   27   35   43   51   59   67
-[3,]   12   20   28   36   44   52   60   68
-[4,]   13   21   29   37   45   53   61   69
-[5,]   14   22   30   38   46   54   62   70
-
+x
+```
 *complete success!*
 
-#Challenge 3:
+# Challenge 3:
 
 Construct a 4-dimensional, 400 element array (5 x 5 x 4 x 4) named a consisting of the numbers 400 to 1 (i.e., a descending series)
 
-a <- array(data= 400:1, dim= c(5,5,4,40))
-a
-*incorrect*
-a <- array(data= 400:1, dim= c(5,5,4))
-a
-, , 1
-
-     [,1] [,2] [,3] [,4] [,5]
-[1,]  400  395  390  385  380
-[2,]  399  394  389  384  379
-[3,]  398  393  388  383  378
-[4,]  397  392  387  382  377
-[5,]  396  391  386  381  376
-
-, , 2
-
-     [,1] [,2] [,3] [,4] [,5]
-[1,]  375  370  365  360  355
-[2,]  374  369  364  359  354
-[3,]  373  368  363  358  353
-[4,]  372  367  362  357  352
-[5,]  371  366  361  356  351
-
-, , 3
-
-     [,1] [,2] [,3] [,4] [,5]
-[1,]  350  345  340  335  330
-[2,]  349  344  339  334  329
-[3,]  348  343  338  333  328
-[4,]  347  342  337  332  327
-[5,]  346  341  336  331  326
-
-, , 4
-
-     [,1] [,2] [,3] [,4] [,5]
-[1,]  325  320  315  310  305
-[2,]  324  319  314  309  304
-[3,]  323  318  313  308  303
-[4,]  322  317  312  307  302
-[5,]  321  316  311  306  301
-
-*correct?* **no**
-
-a[1,1,1,2]
-Error in a[1, 1, 1, 2] : incorrect number of dimensions
- a[2, 3, 2, ]
-Error in a[2, 3, 2, ] : incorrect number of dimensions
 
 ```{r}
 a <- array(data= 400:1, dim= c(5,5,4,4))
@@ -231,14 +97,11 @@ m
 m[7, 1]
 ```
 
-```{r}
-s
-```
 
 s <- c("this", "is", "a", "vector", "of", "strings") 
 # here we have a vector
 
-#Challenge 4
+# Challenge 4
 ```{r}
 Lemuroidea <- c("Cheirogaleidae", "Lepilemuridae", "Indriidae", "Lemuridae",
     "Daubentoniidae")
@@ -288,7 +151,7 @@ new_df
 ```
 (shows 0 because skipped parts where you add this in module steps)
 
-#Challenge 5
+# Challenge 5:
 ```{r}
 m3 <- matrix(data = c(3, 0, 1, 23, 1, 2, 33, 1, 1, 42, 0, 1, 41, 0, 2), nrow=5, ncol=3, byrow=TRUE)
 m3
@@ -307,7 +170,7 @@ new_df
 new_df <- df[df$x3 == "1", c("x1")]
 new_df
 ```
-???
+Gives a null?
 ```{r}
 str(m3)
 ```
