--- a/AN588-Week-2.Rmd
+++ b/AN588-Week-2.Rmd
@@ -76,6 +76,8 @@ a <- array(data= 400:1, dim= c(5,5,4,4))
 a
 ```
 
+Dimensions go in the commas after "c".
+
 ```{r}
 a[1,1,1,2]
 ```
@@ -99,7 +101,7 @@ m[7, 1]
 
 
 s <- c("this", "is", "a", "vector", "of", "strings") 
-# here we have a vector
+*here we have a vector setup*
 
 # Challenge 4
 ```{r}
@@ -121,6 +123,8 @@ Haplorhini <- list(Anthropoidea, Tarsioidea)
 names(Haplorhini) <- list("Anthropoidea", "Tarsioidea")
 ```
 
+Each time you list it will put it below whatever you tell it to list TO.
+
 ```{r}
 Haplorhini
 ```
@@ -129,6 +133,8 @@ Haplorhini
 df <- read.csv("~/Desktop/random-people.csv", sep = ",", header = TRUE, stringsAsFactors = FALSE)
 df[, c(1, 3, 4, 11, 12)]
 ```
+
+You have to have the file in the location stated. (Ex.Desktop)
 
 ```{r}
 str(df)
@@ -157,20 +163,22 @@ m3 <- matrix(data = c(3, 0, 1, 23, 1, 2, 33, 1, 1, 42, 0, 1, 41, 0, 2), nrow=5, 
 m3
 ```
 
+byrow must be true for this to fill by row!
+
 ```{r}
 data.frame(m3)
 ```
 
 ```{r}
-new_df <- df[df$x2 == "0"]
-new_df
+ df[,2]<-as.character(df[,2])
+str(df)
 ```
 
 ```{r}
-new_df <- df[df$x3 == "1", c("x1")]
-new_df
+ df[,3]<-as.factor(df[,3])
+str(df)
 ```
-Gives a null?
+Gives a null? -> as.factor ; have to specify data frame and what you are changing to a factor
 ```{r}
 str(m3)
 ```
